Revision history for Email-Sender

{{$NEXT}}

0.102370  2010-08-25 08:37:22 America/New_York
          remove spurious prereq on Sys::Hostname::Long (thanks ABH)
          tweak some tests for truth/definedness in SMTP transport

0.102360  2010-08-24 07:47:24 America/New_York
          avoid the need to use "excludes" in role application; this silences
          warnings with Moose 1.10

0.101760  2010-06-25 08:18:26 America/New_York
          fix sendmail.t with latest Capture::Tiny (Justin Hunter)

0.100460  2010-02-15 12:58:18 America/New_York
          avoid using AutoPrereq, as it brings in build_requires as requires

0.100450  2010-02-14 17:55:48 America/New_York
          allow timeout option to SMTP transport

0.100110  2010-01-11 10:43:57 America/New_York
          Email::Sender::Failure is now a Throwable::Error
          now uses Try::Tiny for internal exception handling

0.093380  2009-12-04 12:29:55 America/New_York
          bump Moose prereq to 0.70 based on feedback from ANDK

0.093110  2009-11-07
          allow uppercase env vars to set transport attributes (charsbar)
          add "message" attribute to successes returned by SMTP transports

0.092840  2009-10-10
          fix packaging error

0.092820  2009-10-09
          improve reliability of t/sendmail.t (thanks, Mark Grimes)

0.091940  2009-07-12
          packaging fixes (EU:MM version for LICENSE param) rt #47817

0.091930  2009-07-12
          add some more common sendmail locations to default search

0.091870  2009-07-06
          exclude unwanted methods from Email::Sender::Transport
          to suppress a new warning from Moose role composition

0.091740  2009-06-23
          no code changes
          remove prereq of Test::More 0.88; weird things happened

0.091661  2009-06-15
          THIS RELEASE MAY BREAK YOUR CODE... but probably not

          Email::Sender::Simple has been added, along with a manual
          Email::Sender is now a role